--- a/e17/Makefile
+++ b/e17/Makefile
@@ -4,6 +4,7 @@
 DISTVERSION=	0.17.1
 DISTNAME=	enlightenment-${DISTVERSION}
 PKGNAME=	e17-${DISTVERSION:S/-//}
+PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	http://download.enlightenment.org/releases/
 EXTRACT_SUFX=	.tar.bz2
