--- a/py-musicbrainz-ngs/Makefile
+++ b/py-musicbrainz-ngs/Makefile
@@ -1,9 +1,9 @@
 # $NetBSD$
 
-# for egg
-DISTNAME=	musicbrainzngs-0.3dev
+DISTNAME=	v0.3
 PKGNAME=	${PYPKGPREFIX}-musicbrainz-ngs-0.3
 CATEGORIES=	audio net
+MASTER_SITES=	https://github.com/alastair/python-musicbrainz-ngs/archive/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/alastair/python-musicbrainz-ngs
@@ -12,11 +12,11 @@ LICENSE=	2-clause-bsd
 
 DEPENDS+=	${PYPKGPREFIX}-expat-[0-9]*:../../textproc/py-expat
 
-GIT_REPOSITORIES=			python-musicbrainz-ngs
-GIT_REPO.python-musicbrainz-ngs=	git://github.com/alastair/python-musicbrainz-ngs.git
+WRKSRC=		${WRKDIR}/python-musicbrainz-ngs-0.3
+DIST_SUBDIR=	py-musicbrainz-ngs
 
-WRKSRC=		${WRKDIR}/python-musicbrainz-ngs
+PYTHON_VERSIONS_INCLUDE_3X=	yes
+EGG_NAME=			musicbrainzngs-0.3
 
 .include "../../lang/python/distutils.mk"
-.include "../../wip/mk/git-package.mk"
 .include "../../mk/bsd.pkg.mk"
