--- a/py-ejson/Makefile
+++ b/py-ejson/Makefile
@@ -17,5 +17,6 @@ LICENSE=	gnu-lgpl-v3
 WRKSRC=		${WRKDIR}/${PKG}-${PKGVERSION}
 USE_LANGUAGES=	# none
 
+DEPENDS+=	${PYPKGPREFIX}-dateutil-[0-9]*:../../time/py-dateutil
 .include "../../lang/python/distutils.mk"
 .include "../../mk/bsd.pkg.mk"
