--- a/celery/Makefile
+++ b/celery/Makefile
@@ -12,5 +12,6 @@ LICENSE=	modified-bsd # AND cc-by-nc-sa-v3.0
 
 USE_LANGUAGES=	# none
 
+DEPENDS+=	${PYPKGPREFIX}-kombu-[0-9]*:../../wip/py-kombu
 .include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
