--- a/gcc48snapshot/Makefile
+++ b/gcc48snapshot/Makefile
@@ -10,8 +10,8 @@ PKGNAME=	${GCC_PKGNAME}-${GCC48S_DIST_VERSION}
 ## PKGREVISION of this package!
 #PKGREVISION=	1
 CATEGORIES=	lang
-MASTER_SITES=	${MASTER_SITE_GNU:=gcc/snapshots/${GCC48S_DIST_VERSION}/}
-MASTER_SITES+=	ftp://ftp.fu-berlin.de/unix/languages/gcc/snapshots/${GCC48S_DIST_VERSION}/
+#MASTER_SITES=	${MASTER_SITE_GNU:=gcc/snapshots/${GCC48S_DIST_VERSION}/}
+MASTER_SITES=	ftp://ftp.fu-berlin.de/unix/languages/gcc/snapshots/${GCC48S_DIST_VERSION}/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
