--- a/aircrack-ng/Makefile
+++ b/aircrack-ng/Makefile
@@ -1,16 +1,16 @@
 # $NetBSD$
 
-DISTNAME=		aircrack-ng-1.1
-CATEGORIES=		security net
-MASTER_SITES=		http://download.aircrack-ng.org/
+DISTNAME=	aircrack-ng-1.2-beta1
+PKGNAME=	aircrack-ng-1.2b1
+CATEGORIES=	security net
+MASTER_SITES=	http://download.aircrack-ng.org/
 
-MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://www.aircrack-ng.org/
-COMMENT=		Tools for auditing wireless networks
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://www.aircrack-ng.org/
+COMMENT=	Tools for auditing wireless networks
+LICENSE=	gnu-gpl-v3
 
-LICENSE=		gnu-gpl-v3
-
-INSTALLATION_DIRS+=	bin sbin ${PKGMANDIR}/man1
+INSTALLATION_DIRS+=	bin sbin ${PKGMANDIR}/man1 ${PKGMANDIR}/man8
 
 USE_TOOLS+=		bash gmake
 REPLACE_BASH+=		scripts/airdriver-ng
